src/styles.css
/* You can add global styles to this file, and also import other style files */


.pad-30{
  padding: 30px 50px;
}

h2{
  color:#444
}

h3{
  color:#555
}

h4{
  color:#666
}

h5{
  color:#777
}

h6{
  color:#888
}

/*
  Prime ng styles
*/
img.ui-panel-images {
  width: auto;
  max-width: 100%;
  height: auto;
  max-height: 100%;
}

li.ui-galleria-panel {
  text-align: center;
}

.ui-galleria{
  margin: auto;
}

.ui-carousel .ui-carousel-header {
    display: none;
}
.ui-carousel .ui-carousel-viewport .ui-carousel-items .ui-carousel-item, .ui-carousel{
  border: 0;
}

